@@ -247,28 +247,28 @@ CELL ngaImage[] = { 1793,14460,15004,15046,202004,0,10,1,10,2,10,3,10,4,10,5,10,
                        61,62,63,64,91,92,93,94,96,123,124,125,126,0,1,4800,1,95,67502597,16,
                        10,4781,4856,131,115,58,87,72,73,84,69,83,80,65,67,69,0,32,9,10,
                        13,0,4840,4866,156,39,0,1,3648,2049,144,10,4861,4876,156,36,0,1,0,2049,
-                       131,10,4871,0,131,65,83,67,73,73,58,78,85,76,0,4881,1,131,65,83,
-                       67,73,73,58,83,79,72,0,4894,2,131,65,83,67,73,73,58,83,84,88,
-                       0,4907,3,131,65,83,67,73,73,58,69,84,88,0,4920,4,131,65,83,67,
-                       73,73,58,69,79,84,0,4933,5,131,65,83,67,73,73,58,69,78,81,0,
-                       4946,6,131,65,83,67,73,73,58,65,67,75,0,4959,7,131,65,83,67,73,
-                       73,58,66,69,76,0,4972,8,131,65,83,67,73,73,58,66,83,0,4985,9,
-                       131,65,83,67,73,73,58,72,84,0,4997,10,131,65,83,67,73,73,58,76,
-                       70,0,5009,11,131,65,83,67,73,73,58,86,84,0,5021,12,131,65,83,67,
-                       73,73,58,70,70,0,5033,13,131,65,83,67,73,73,58,67,82,0,5045,14,
-                       131,65,83,67,73,73,58,83,79,0,5057,15,131,65,83,67,73,73,58,83,
-                       73,0,5069,16,131,65,83,67,73,73,58,68,76,69,0,5081,17,131,65,83,
-                       67,73,73,58,68,67,49,0,5094,18,131,65,83,67,73,73,58,68,67,50,
-                       0,5107,19,131,65,83,67,73,73,58,68,67,51,0,5120,20,131,65,83,67,
-                       73,73,58,68,67,52,0,5133,21,131,65,83,67,73,73,58,78,65,75,0,
-                       5146,22,131,65,83,67,73,73,58,83,89,78,0,5159,23,131,65,83,67,73,
-                       73,58,69,84,66,0,5172,24,131,65,83,67,73,73,58,67,65,78,0,5185,
-                       25,131,65,83,67,73,73,58,69,77,0,5198,26,131,65,83,67,73,73,58,
-                       83,85,66,0,5210,27,131,65,83,67,73,73,58,69,83,67,0,5223,28,131,
-                       65,83,67,73,73,58,70,83,0,5236,29,131,65,83,67,73,73,58,71,83,
-                       0,5248,30,131,65,83,67,73,73,58,82,83,0,5260,31,131,65,83,67,73,
-                       73,58,85,83,0,5272,32,131,65,83,67,73,73,58,83,80,65,67,69,0,
-                       5284,127,131,65,83,67,73,73,58,68,69,76,0,5299,5328,144,99,58,108,111,
+                       131,10,4871,0,131,65,83,67,73,73,58,78,85,76,0,4881,8,131,65,83,
+                       67,73,73,58,66,83,0,4894,9,131,65,83,67,73,73,58,72,84,0,4906,
+                       10,131,65,83,67,73,73,58,76,70,0,4918,11,131,65,83,67,73,73,58,
+                       86,84,0,4930,12,131,65,83,67,73,73,58,70,70,0,4942,13,131,65,83,
+                       67,73,73,58,67,82,0,4954,32,131,65,83,67,73,73,58,83,80,65,67,
+                       69,0,4966,127,131,65,83,67,73,73,58,68,69,76,0,4981,1,131,65,83,
+                       67,73,73,58,83,79,72,0,4994,2,131,65,83,67,73,73,58,83,84,88,
+                       0,5007,3,131,65,83,67,73,73,58,69,84,88,0,5020,4,131,65,83,67,
+                       73,73,58,69,79,84,0,5033,5,131,65,83,67,73,73,58,69,78,81,0,
+                       5046,6,131,65,83,67,73,73,58,65,67,75,0,5059,7,131,65,83,67,73,
+                       73,58,66,69,76,0,5072,14,131,65,83,67,73,73,58,83,79,0,5085,15,
+                       131,65,83,67,73,73,58,83,73,0,5097,16,131,65,83,67,73,73,58,68,
+                       76,69,0,5109,17,131,65,83,67,73,73,58,68,67,49,0,5122,18,131,65,
+                       83,67,73,73,58,68,67,50,0,5135,19,131,65,83,67,73,73,58,68,67,
+                       51,0,5148,20,131,65,83,67,73,73,58,68,67,52,0,5161,21,131,65,83,
+                       67,73,73,58,78,65,75,0,5174,22,131,65,83,67,73,73,58,83,89,78,
+                       0,5187,23,131,65,83,67,73,73,58,69,84,66,0,5200,24,131,65,83,67,
+                       73,73,58,67,65,78,0,5213,25,131,65,83,67,73,73,58,69,77,0,5226,
+                       26,131,65,83,67,73,73,58,83,85,66,0,5238,27,131,65,83,67,73,73,
+                       58,69,83,67,0,5251,28,131,65,83,67,73,73,58,70,83,0,5264,29,131,
+                       65,83,67,73,73,58,71,83,0,5276,30,131,65,83,67,73,73,58,82,83,
+                       0,5288,31,131,65,83,67,73,73,58,85,83,0,5300,5328,144,99,58,108,111,
                        119,101,114,99,97,115,101,63,0,1,97,1,122,2049,2924,10,5312,5351,144,99,
                        58,117,112,112,101,114,99,97,115,101,63,0,1,65,1,90,2049,2924,10,5335,
                        5371,144,99,58,108,101,116,116,101,114,63,0,1,5328,1,5351,2049,2128,22,10,
